TP-280 update: generate doc
